<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <RelativeLayout
            android:id="@+id/the_layout"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/image_on_notes"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_card_dot"
                android:layout_centerVertical="true"
                android:contentDescription="@string/notes_dot"/>

            <TextView
                android:id="@+id/notes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_margin="8dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_toEndOf="@id/image_on_notes"
                android:text="@string/notes_title"/>

            <TextView
                android:id="@+id/notes_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/image_on_notes"
                android:layout_below="@id/notes_title"
                android:textSize="12sp"
                android:text="@string/notes_date"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>